package com.directi.training.dip.exercise;

import java.io.IOException;

public interface IReader {
    public String read() throws IOException;
}
