package com.directi.training.dip.exercise;

import java.io.IOException;

public interface IWriter {
    public void write(String data) throws IOException;
}
